test/tests/nek_errors/invalid_settings/brick.oudf
void udfNeumann(bcData *bc)
{
  bc->fluxScalar = 0.0;
}
